add modal window for licenses

--- a/src/partials/news/news.html
+++ b/src/partials/news/news.html
@@ -15,216 +15,216 @@
         Новости
       </h1>
       <div class="news__block">
-        <ul class="news__list list-reset">
-          <div class="card h-100 news__item">
-            <div class="h-100 news__item-wrap d-flex">
-              <div class="news__item-img">
+        <div class="news__list">
+          <div class="card h-100 main-news__item">
+            <div class="h-100 main-news__item-wrap d-flex">
+              <div class="main-news__item-img">
                 <img src="./img/KSF 2.png">
               </div>
-              <div class="news__item-right d-flex flex-column justify-content-between">
-                <div class="news__item-top d-flex flex-column">
-              <span class="news__item-date text-button">
+              <div class="main-news__item-right d-flex flex-column justify-content-between">
+                <div class="main-news__item-top d-flex flex-column">
+              <span class="main-news__item-date">
                 25.11.2020
               </span>
-                  <h3 class="text-h9-all news__item-title">
+                  <h3 class="text-h9 main-news__item-title">
                     Второй Всероссийский форум «Доверенные квантовые технологии и коммуникации. КВАНТ 2024»
                   </h3>
-                  <p class="descr1 news__item-text">
+                  <p class="main-news__item-text">
                     Научно-техническое предприятие «Криптософт» приняло участие
                     во втором Всероссийском форуме...
                   </p>
                 </div>
-                <div class="news__item-more-wrap">
-                  <a href="detail-news.html" class="news__item-more">
+                <div class="main-news__item-more-wrap">
+                  <a href="detail-news.html" class="main-news__item-more">
                     <span>подробнее</span>
                   </a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="card h-100 news__item">
-            <div class="h-100 news__item-wrap d-flex">
-              <div class="news__item-img">
+          <div class="card h-100 main-news__item">
+            <div class="h-100 main-news__item-wrap d-flex">
+              <div class="main-news__item-img">
                 <img src="./img/news2.png">
               </div>
-              <div class="news__item-right d-flex flex-column justify-content-between">
-                <div class="news__item-top d-flex flex-column">
-              <span class="news__item-date text-button">
+              <div class="main-news__item-right d-flex flex-column justify-content-between">
+                <div class="main-news__item-top d-flex flex-column">
+              <span class="main-news__item-date">
                 25.11.2020
               </span>
-                  <h3 class="text-h9-all news__item-title">
+                  <h3 class="main-news__item-title text-h9">
                     10-я конференция «OS DAY. Экосистема российских ОС» jkdashfjksdhf askjdfh ajksdf aadsjkfhasdjkfh adsfasdkjfh ajksdfhajks dfasd f kjsdhfjksdf asdjkfhasdjkfh aasdfasdfasdfjkasdhfkjasdf asdjkfahsdjkfhas dkjfhasdkf asdasdfsdf sdfadsfasdf asdfasdf asdfasdf asdf asdf asdf asdfsadfsadf asdfas dfd
                   </h3>
-                  <p class="descr1 news__item-text">
+                  <p class="main-news__item-text">
                     Научно-техническое предприятие «Криптософт» приняло участие
                     во втором Всероссийском форуме...adksfhkjasdfhkjas ajksdfhaksjdfh asdfasdf asdjkfas adsf asd
                   </p>
                 </div>
-                <div class="news__item-more-wrap">
-                  <a class="news__item-more">
+                <div class="main-news__item-more-wrap">
+                  <a href="detail-news.html" class="main-news__item-more">
                     <span>подробнее</span>
                   </a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="card h-100 news__item">
-            <div class="h-100 news__item-wrap d-flex">
-              <div class="news__item-img">
-                <img src="./img/news3.png">
-              </div>
-              <div class="news__item-right d-flex flex-column justify-content-between">
-                <div class="news__item-top d-flex flex-column">
-              <span class="news__item-date text-button">
-                25.11.2020
-              </span>
-                  <h3 class="text-h9-all news__item-title">
-                    Второй Всероссийский форум «Доверенные квантовые технологии и коммуникации. КВАНТ 2024»
-                  </h3>
-                  <p class="descr1 news__item-text">
-                    Научно-техническое предприятие «Криптософт» приняло участие
-                    во втором Всероссийском форуме...
-                  </p>
-                </div>
-                <div class="news__item-more-wrap">
-                  <a class="news__item-more">
-                    <span>подробнее</span>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card h-100 news__item">
-            <div class="h-100 news__item-wrap d-flex">
-              <div class="news__item-img">
-                <img src="./img/news4.png">
-              </div>
-              <div class="news__item-right d-flex flex-column justify-content-between">
-                <div class="news__item-top d-flex flex-column">
-              <span class="news__item-date text-button">
-                25.11.2020
-              </span>
-                  <h3 class="text-h9-all news__item-title">
-                    10-я конференция «OS DAY. Экосистема российских ОС»
-                  </h3>
-                  <p class="descr1 news__item-text">
-                    Научно-техническое предприятие «Криптософт» приняло участие
-                    во втором Всероссийском форуме...
-                  </p>
-                </div>
-                <div class="news__item-more-wrap">
-                  <a class="news__item-more">
-                    <span>подробнее</span>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card h-100 news__item">
-            <div class="h-100 news__item-wrap d-flex">
-              <div class="news__item-img">
+          <div class="card h-100 main-news__item">
+            <div class="h-100 main-news__item-wrap d-flex">
+              <div class="main-news__item-img">
                 <img src="./img/KSF 2.png">
               </div>
-              <div class="news__item-right d-flex flex-column justify-content-between">
-                <div class="news__item-top d-flex flex-column">
-              <span class="news__item-date text-button">
+              <div class="main-news__item-right d-flex flex-column justify-content-between">
+                <div class="main-news__item-top d-flex flex-column">
+              <span class="main-news__item-date">
                 25.11.2020
               </span>
-                  <h3 class="text-h9-all news__item-title">
+                  <h3 class="text-h9 main-news__item-title">
                     Второй Всероссийский форум «Доверенные квантовые технологии и коммуникации. КВАНТ 2024»
                   </h3>
-                  <p class="descr1 news__item-text">
+                  <p class="main-news__item-text">
                     Научно-техническое предприятие «Криптософт» приняло участие
                     во втором Всероссийском форуме...
                   </p>
                 </div>
-                <div class="news__item-more-wrap">
-                  <a class="news__item-more">
+                <div class="main-news__item-more-wrap">
+                  <a href="detail-news.html" class="main-news__item-more">
                     <span>подробнее</span>
                   </a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="card h-100 news__item">
-            <div class="h-100 news__item-wrap d-flex">
-              <div class="news__item-img">
+          <div class="card h-100 main-news__item">
+            <div class="h-100 main-news__item-wrap d-flex">
+              <div class="main-news__item-img">
                 <img src="./img/news2.png">
               </div>
-              <div class="news__item-right d-flex flex-column justify-content-between">
-                <div class="news__item-top d-flex flex-column">
-              <span class="news__item-date text-button">
+              <div class="main-news__item-right d-flex flex-column justify-content-between">
+                <div class="main-news__item-top d-flex flex-column">
+              <span class="main-news__item-date">
                 25.11.2020
               </span>
-                  <h3 class="text-h9-all news__item-title">
+                  <h3 class="main-news__item-title text-h9">
                     10-я конференция «OS DAY. Экосистема российских ОС» jkdashfjksdhf askjdfh ajksdf aadsjkfhasdjkfh adsfasdkjfh ajksdfhajks dfasd f kjsdhfjksdf asdjkfhasdjkfh aasdfasdfasdfjkasdhfkjasdf asdjkfahsdjkfhas dkjfhasdkf asdasdfsdf sdfadsfasdf asdfasdf asdfasdf asdf asdf asdf asdfsadfsadf asdfas dfd
                   </h3>
-                  <p class="descr1 news__item-text">
+                  <p class="main-news__item-text">
                     Научно-техническое предприятие «Криптософт» приняло участие
                     во втором Всероссийском форуме...adksfhkjasdfhkjas ajksdfhaksjdfh asdfasdf asdjkfas adsf asd
                   </p>
                 </div>
-                <div class="news__item-more-wrap">
-                  <a class="news__item-more">
+                <div class="main-news__item-more-wrap">
+                  <a href="detail-news.html" class="main-news__item-more">
                     <span>подробнее</span>
                   </a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="card h-100 news__item">
-            <div class="h-100 news__item-wrap d-flex">
-              <div class="news__item-img">
-                <img src="./img/news3.png">
+          <div class="card h-100 main-news__item">
+            <div class="h-100 main-news__item-wrap d-flex">
+              <div class="main-news__item-img">
+                <img src="./img/KSF 2.png">
               </div>
-              <div class="news__item-right d-flex flex-column justify-content-between">
-                <div class="news__item-top d-flex flex-column">
-              <span class="news__item-date text-button">
+              <div class="main-news__item-right d-flex flex-column justify-content-between">
+                <div class="main-news__item-top d-flex flex-column">
+              <span class="main-news__item-date">
                 25.11.2020
               </span>
-                  <h3 class="text-h9-all news__item-title">
+                  <h3 class="text-h9 main-news__item-title">
                     Второй Всероссийский форум «Доверенные квантовые технологии и коммуникации. КВАНТ 2024»
                   </h3>
-                  <p class="descr1 news__item-text">
+                  <p class="main-news__item-text">
                     Научно-техническое предприятие «Криптософт» приняло участие
                     во втором Всероссийском форуме...
                   </p>
                 </div>
-                <div class="news__item-more-wrap">
-                  <a class="news__item-more">
+                <div class="main-news__item-more-wrap">
+                  <a href="detail-news.html" class="main-news__item-more">
                     <span>подробнее</span>
                   </a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="card h-100 news__item">
-            <div class="h-100 news__item-wrap d-flex">
-              <div class="news__item-img">
-                <img src="./img/news4.png">
+          <div class="card h-100 main-news__item">
+            <div class="h-100 main-news__item-wrap d-flex">
+              <div class="main-news__item-img">
+                <img src="./img/news2.png">
               </div>
-              <div class="news__item-right d-flex flex-column justify-content-between">
-                <div class="news__item-top d-flex flex-column">
-              <span class="news__item-date text-button">
+              <div class="main-news__item-right d-flex flex-column justify-content-between">
+                <div class="main-news__item-top d-flex flex-column">
+              <span class="main-news__item-date">
                 25.11.2020
               </span>
-                  <h3 class="text-h9-all news__item-title">
-                    10-я конференция «OS DAY. Экосистема российских ОС»
+                  <h3 class="main-news__item-title text-h9">
+                    10-я конференция «OS DAY. Экосистема российских ОС» jkdashfjksdhf askjdfh ajksdf aadsjkfhasdjkfh adsfasdkjfh ajksdfhajks dfasd f kjsdhfjksdf asdjkfhasdjkfh aasdfasdfasdfjkasdhfkjasdf asdjkfahsdjkfhas dkjfhasdkf asdasdfsdf sdfadsfasdf asdfasdf asdfasdf asdf asdf asdf asdfsadfsadf asdfas dfd
                   </h3>
-                  <p class="descr1 news__item-text">
+                  <p class="main-news__item-text">
                     Научно-техническое предприятие «Криптософт» приняло участие
-                    во втором Всероссийском форуме...
+                    во втором Всероссийском форуме...adksfhkjasdfhkjas ajksdfhaksjdfh asdfasdf asdjkfas adsf asd
                   </p>
                 </div>
-                <div class="news__item-more-wrap">
-                  <a class="news__item-more">
+                <div class="main-news__item-more-wrap">
+                  <a href="detail-news.html" class="main-news__item-more">
                     <span>подробнее</span>
                   </a>
                 </div>
               </div>
             </div>
           </div>
-        </ul>
+          <div class="card h-100 main-news__item">
+            <div class="h-100 main-news__item-wrap d-flex">
+              <div class="main-news__item-img">
+                <img src="./img/KSF 2.png">
+              </div>
+              <div class="main-news__item-right d-flex flex-column justify-content-between">
+                <div class="main-news__item-top d-flex flex-column">
+              <span class="main-news__item-date">
+                25.11.2020
+              </span>
+                  <h3 class="text-h9 main-news__item-title">
+                    Второй Всероссийский форум «Доверенные квантовые технологии и коммуникации. КВАНТ 2024»
+                  </h3>
+                  <p class="main-news__item-text">
+                    Научно-техническое предприятие «Криптософт» приняло участие
+                    во втором Всероссийском форуме...
+                  </p>
+                </div>
+                <div class="main-news__item-more-wrap">
+                  <a href="detail-news.html" class="main-news__item-more">
+                    <span>подробнее</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card h-100 main-news__item">
+            <div class="h-100 main-news__item-wrap d-flex">
+              <div class="main-news__item-img">
+                <img src="./img/news2.png">
+              </div>
+              <div class="main-news__item-right d-flex flex-column justify-content-between">
+                <div class="main-news__item-top d-flex flex-column">
+              <span class="main-news__item-date">
+                25.11.2020
+              </span>
+                  <h3 class="main-news__item-title text-h9">
+                    10-я конференция «OS DAY. Экосистема российских ОС» jkdashfjksdhf askjdfh ajksdf aadsjkfhasdjkfh adsfasdkjfh ajksdfhajks dfasd f kjsdhfjksdf asdjkfhasdjkfh aasdfasdfasdfjkasdhfkjasdf asdjkfahsdjkfhas dkjfhasdkf asdasdfsdf sdfadsfasdf asdfasdf asdfasdf asdf asdf asdf asdfsadfsadf asdfas dfd
+                  </h3>
+                  <p class="main-news__item-text">
+                    Научно-техническое предприятие «Криптософт» приняло участие
+                    во втором Всероссийском форуме...adksfhkjasdfhkjas ajksdfhaksjdfh asdfasdf asdjkfas adsf asd
+                  </p>
+                </div>
+                <div class="main-news__item-more-wrap">
+                  <a href="detail-news.html" class="main-news__item-more">
+                    <span>подробнее</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="news__pagination d-flex align-items-center justify-content-between">
           <button disabled class="btn-reset news__pagination-btn">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
