--- a/src/partials/work/work.html
+++ b/src/partials/work/work.html
@@ -15,25 +15,28 @@
         <h1 class="text-h2 text-h2-1 work__title text-uppercase">
           работа в криптософт
         </h1>
-        <div class="work__tab-head">
-          <ul class="work__tab-head-list">
-            <li class="work__tab-head-item">
-              <button class="work__tab-head-btn">
-                вакансии
-              </button>
-            </li>
-            <li class="work__tab-head-item">
-              <button class="work__tab-head-btn">
-                хочу на стажировку
-              </button>
-
-            </li>
-            <li class="work__tab-head-item">
-              <button class="work__tab-head-btn">
-                жизнь в компании
-              </button>
-            </li>
-          </ul>
+        <div class="pages-header work__pages-header">
+          <div class="pages-links work__pages-links">
+            <nav class="pages-links-nav">
+              <ul class="pages-links-list d-flex flex-wrap align-items-center list-reset">
+                <li class="pages-links-item">
+                  <button class="pages-links-link btn-reset">
+                    вакансии
+                  </button>
+                </li>
+                <li class="pages-links-item">
+                  <button class="pages-links-link btn-reset">
+                    хочу на стажировку
+                  </button>
+                </li>
+                <li class="pages-links-item">
+                  <button class="pages-links-link btn-reset">
+                    жизнь в компании
+                  </button>
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
       </div>
       <div class="work__bottom">
