--- a/src/partials/licenses/licenses.html
+++ b/src/partials/licenses/licenses.html
@@ -299,4 +299,55 @@
       </div>
     </div>
   </div>
+  <div class="js-license-modal modal-xl modal fade" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog-centered modal-dialog licenses__modal-dialog">
+      <div class="modal-content licenses__modal-content">
+        <div class="modal-header licenses__modal-header">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+        </div>
+        <div class="modal-body licenses__modal-body">
+          <div class="licenses__modal-wrap flex-column flex-lg-row d-flex align-items-start">
+            <div class="licenses__modal-swiper">
+              <div class="licenses__swiper swiper">
+                <div class="swiper-wrapper licenses__wrapper">
+                  <div  class="swiper-slide licenses__slide">
+                    <img src="../img/licenses.png">
+                  </div>
+                  <div  class="swiper-slide licenses__slide">
+                    <img src="../img/licenses.png">
+                  </div>
+                </div>
+                <div class="licenses__pagination">
+
+                </div>
+              </div>
+            </div>
+            <div class="licenses__modal-description">
+              <h2 class="licenses__modal-title">
+                Лицензия ФСБ РОССИИ № 0131563 ОТ 05.06.2021
+              </h2>
+              <div class="licenses__modal-date">
+                зарегистирован:<span>10.08.2024</span>
+              </div>
+              <p class="licenses__modal-descr">
+                Лицензия выдана Центром по лицензированию, сертификации
+                ёи защите государственной тайны ФСБ России на осуществление выявления электронных устройств, предназначенных для негласного получения информации (за исключением случая, если указанная деятельность осуществляется для обеспечения собственных нужд юридического лица или индивидуального предпринимателя).
+              </p>
+              <div class="licenses__modal-link-wrap">
+                <a class="licenses__modal-link">
+                  Скачать
+                  <span class="licenses__modal-svg">
+                  <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M8 2C8.27614 2 8.5 2.22386 8.5 2.5V10.2929L10.6464 8.14645C10.8417 7.95118 11.1583 7.95118 11.3536 8.14645C11.5488 8.34171 11.5488 8.65829 11.3536 8.85355L8.35355 11.8536C8.15829 12.0488 7.84171 12.0488 7.64645 11.8536L4.64645 8.85355C4.45118 8.65829 4.45118 8.34171 4.64645 8.14645C4.84171 7.95118 5.15829 7.95118 5.35355 8.14645L7.5 10.2929V2.5C7.5 2.22386 7.72386 2 8 2ZM2 11C2.27614 11 2.5 11.2239 2.5 11.5V13C2.5 13.5523 2.94772 14 3.5 14H12.5C13.0523 14 13.5 13.5523 13.5 13V11.5C13.5 11.2239 13.7239 11 14 11C14.2761 11 14.5 11.2239 14.5 11.5V13C14.5 14.1046 13.6046 15 12.5 15H3.5C2.39543 15 1.5 14.1046 1.5 13V11.5C1.5 11.2239 1.72386 11 2 11Z" fill="#272727"/>
+                    </svg>
+                </span>
+                </a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
