--- a/src/partials/main/hero.html
+++ b/src/partials/main/hero.html
@@ -217,18 +217,17 @@
         </div>
       </div>
       <div class="hero__right-swiper-navigation">
-        <button class="hero__left-swiper-btn btn-reset hero__left-swiper-prev">
+        <button class="hero__left-swiper-btn btn-reset hero__right-swiper-prev">
           <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7906 5.23017C13.0777 5.52875 13.0684 6.00353 12.7698 6.29063L8.83208 10L12.7698 13.7094C13.0684 13.9965 13.0777 14.4713 12.7906 14.7698C12.5035 15.0684 12.0287 15.0777 11.7302 14.7906L7.23017 10.5406C7.08311 10.3992 7 10.204 7 10C7 9.79599 7.08311 9.60078 7.23017 9.45938L11.7302 5.20938C12.0287 4.92228 12.5035 4.93159 12.7906 5.23017Z" fill="white"/>
           </svg>
         </button>
         <div class="hero__right-swiper-pagination"></div>
-        <button class="hero__left-swiper-btn btn-reset hero__left-swiper-next">
+        <button class="hero__left-swiper-btn btn-reset hero__right-swiper-next">
           <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M7.20938 5.23017C6.92228 5.52875 6.93159 6.00353 7.23017 6.29063L11.1679 10L7.23017 13.7094C6.93159 13.9965 6.92228 14.4713 7.20938 14.7698C7.49647 15.0684 7.97125 15.0777 8.26983 14.7906L12.7698 10.5406C12.9169 10.3992 13 10.204 13 10C13 9.79599 12.9169 9.60078 12.7698 9.45938L8.26983 5.20938C7.97125 4.92228 7.49647 4.93159 7.20938 5.23017Z" fill="white"/>
           </svg>
         </button>
-
       </div>
     </div>
   </div>
